# openslam_falkolib

./: CMakeLists.txt  build_falko_lib.cmake  package.xml
include/falko_lib/Common/: GeomUtils.h  LaserScan.h
include/falko_lib/Feature/: BSC.h  BSCExtractor.h  CGH.h  CGHExtractor.h  DescriptorExtractor.h  FALKO.h  FALKOExtractor.h  Keypoint.h  KeypointExtractor.h  OC.h  OCExtractor.h
include/falko_lib/Matching/: AHTMatcher.h  CCDAMatcher.h  CGH.cpp  Matcher.h  NNMatcher.h
include/falkolib/Feature/: CGH.h  Keypoint.h
include/falkolib/Matching/: AHTMatcher.h  CCDAMatcher.h  CGH.cpp  NNMatcher.h
src/Common/: HoughSpectrum.cpp
src/Feature/: BSC.cpp  CGH.cpp  FALKOExtractor.cpp  OCExtractor.cpp
test/: testFalkoAHT.cpp  testFalkoCC.cpp  testKeypointFalko.cpp  testKeypointOC.cpp
