<?xml version="1.0"?>
<package>
  <name>falko_lib</name>
  <version>0.9.0</version>
  <description>falko_lib fork for catkin</description>

  <maintainer email="Mark.Brennerk@faro.com">Mark Brenner</maintainer>

  <license>(C) FARO Technologies Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>
